--- a/CS252/Project6/testapp/package.json
+++ b/CS252/Project6/testapp/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.3",
     "mongodb": "^3.0.7",
     "nedb": "^1.8.0",
+    "require-from-string": "https://github.com/floatdrop/require-from-string/tarball/v1.1.0",
     "rxjs": "^5.0.1",
     "socket.io-client": "^2.1.0",
     "ts-helpers": "^1.1.1",
